--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="style.css" />
+
     <title>Counter</title>
   </head>
   <body>
     <header>
       <h1>Start Counting!</h1>
-      <p class="from">(From 0 to 100)</p>
-      <button class="reset btn">Reset</button>
+      <div class="p-reset">
+        <button class="reset btn">Reset</button>
+        <p class="from">(From 0 to 100)</p>
+      </div>
       <h2 class="number counter-display">36</h2>
     </header>
 
     <main>
       <div class="changes">
-        <button class="btn counter-plus">Increase</button>
         <button class="btn counter-minus">Decrease</button>
+        <button class="btn counter-plus">Increase</button>
       </div>
       <p class="message">Count Now😃...</p>
     </main>
